Changement du background sur la page index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,12 +14,16 @@
             .logo{
                 width: 200px;
             }
+            body{
+                background-color: #ccc;
+            }
         </style>
     </head>
     <body>
         <h1>CFBCursos</h1>
         <h2>Curso de Git/Github</h2>
 
-        <h3>www.youtube.com/cfbcursos</h3>
+        <p>www.youtube.com/cfbcursos</p>
+        <img src="logo_2025_v2.jpg" class="logo"/>
     </body>
 </html>
