Ajout du paragraphe  Aula 2

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 
         <p>www.youtube.com/cfbcursos</p>
         <img src="logo_2025_v2.jpg" class="logo"/>
+        <p>Aula 2 do curso de Git/Hub</p>
     </body>
 </html>
