--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
         <p>www.youtube.com/cfbcursos</p>
         <img src="logo_2025_v2.jpg" class="logo"/>
         <p>Aula 2 do curso de Git/Hub</p>
+        <a href="https://www.youtube.com/cfbcursos" target="_blank">Acessar canal</a>
+        <a href="https://www.youtube.com/playlist?list=PLx4x_zx8csUhopU45en_VDUS9hkze64xO" target="_blank">Curso de Git Github</a>
     </body>
 </html>
