--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 width: 200px;
             }
             body{
-                background-color: #ccc;
+                background-color: #008080;
+                color: #ffffff;
             }
         </style>
     </head>
