Changemenet de couleur de font et ajout immage bannière

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 width: 200px;
             }
             body{
-                background-color: #3eec09;
+                background-color: #4708db;
                 color: #ffffff;
             }
         </style>
@@ -25,7 +25,7 @@
         <h2>Curso de Git/Github</h2>
 
         <p>www.youtube.com/cfbcursos</p>
-        <img src="logo_2025_v2.jpg" class="logo"/>
+        <img src="channels4_banner.jpg" class="logo"/>
         <p>Aula 2 do curso de Git/Hub</p>
         <a href="https://www.youtube.com/cfbcursos" target="_blank">Acessar canal</a>
         <a href="https://www.youtube.com/playlist?list=PLx4x_zx8csUhopU45en_VDUS9hkze64xO" target="_blank">Curso de Git Github</a>
