--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             .logo{
                 width: 200px;
             }
+            .banner{
+                width: 100%;
+            }
             body{
                 background-color: #4708db;
                 color: #ffffff;
@@ -25,9 +28,10 @@
         <h2>Curso de Git/Github</h2>
 
         <p>www.youtube.com/cfbcursos</p>
-        <img src="channels4_banner.jpg" class="logo"/>
+        <img src="logo_2025_v2.jpg" class="logo"/>
         <p>Aula 2 do curso de Git/Hub</p>
         <a href="https://www.youtube.com/cfbcursos" target="_blank">Acessar canal</a>
         <a href="https://www.youtube.com/playlist?list=PLx4x_zx8csUhopU45en_VDUS9hkze64xO" target="_blank">Curso de Git Github</a>
+        <img src="channels4_banner.jpg" class="banner"/>
     </body>
 </html>
