Changement de la couleur de fond en orange

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 width: 100%;
             }
             body{
-                background-color: #4708db;
+                background-color: #f58404;
                 color: #ffffff;
             }
         </style>
