Modification de la couleur des textes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
             body{
                 background-color: #f58404;
-                color: #ffffff;
+                color: #969696;
             }
         </style>
     </head>
