--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 width: 100%;
             }
             body{
-                background-color: #f58404;
-                color: #969696;
+                background-color: #4708db;
+                color: #ffffff;
             }
         </style>
     </head>
