Ajout texte et modification d el acouleur de fond en rouge

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 width: 100%;
             }
             body{
-                background-color: #4708db;
+                background-color: #db082b;
                 color: #ffffff;
             }
         </style>
@@ -26,12 +26,13 @@
     <body>
         <h1>CFBCursos</h1>
         <h2>Curso de Git/Github</h2>
-
+        <h3>Branch production</h3>
         <p>www.youtube.com/cfbcursos</p>
         <img src="logo_2025_v2.jpg" class="logo"/>
         <p>Aula 2 do curso de Git/Hub</p>
         <a href="https://www.youtube.com/cfbcursos" target="_blank">Acessar canal</a>
         <a href="https://www.youtube.com/playlist?list=PLx4x_zx8csUhopU45en_VDUS9hkze64xO" target="_blank">Curso de Git Github</a>
         <img src="channels4_banner.jpg" class="banner"/>
+
     </body>
 </html>
