modification de la couleur de fond en vert et ajout du texte branch master en h2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 width: 100%;
             }
             body{
-                background-color: #4708db;
+                background-color: #08db47;
                 color: #ffffff;
             }
         </style>
@@ -26,7 +26,7 @@
     <body>
         <h1>CFBCursos</h1>
         <h2>Curso de Git/Github</h2>
-
+        <h3>Branch Master</h3>
         <p>www.youtube.com/cfbcursos</p>
         <img src="logo_2025_v2.jpg" class="logo"/>
         <p>Aula 2 do curso de Git/Hub</p>
