--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <body>
         <h1>CFBCursos</h1>
         <h2>Curso de Git/Github</h2>
-        <h3>Branch production</h3>
-        <h3>Branch Master</h3>
+        <h3>Cours 11 git Merge gestion des conflits</h3>
         <p>www.youtube.com/cfbcursos</p>
         <img src="logo_2025_v2.jpg" class="logo"/>
         <p>Aula 2 do curso de Git/Hub</p>
