--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 width: 100%;
             }
             body{
-                background-color: #f508e1;
+                background-color: #0775f1;
                 color: #ffffff;
             }
         </style>
