--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 width: 100%;
             }
             body{
-                background-color: #08db47;
-                color: #ffffff;
+                background-color: #000000;
+                color: #8b83fc;
             }
         </style>
     </head>
