--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </style>
     </head>
     <body>
-        <h1>CFBCursos</h1>
+        <h1>CFBCursos w</h1>
         <h2>Curso de Git/Github</h2>
         <h3>Cours 11 git Merge gestion des conflits</h3>
         <p>www.youtube.com/cfbcursos</p>
