Restauration du BG en bleu et de couleur de la police en #fff

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 width: 100%;
             }
             body{
-                background-color: #000000;
-                color: #8b83fc;
+                background-color: #0477fa;
+                color: #fff;
             }
         </style>
     </head>
