Backgroud rouge - main

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 width: 100%;
             }
             body{
-                background-color: #0477fa;
+                background-color: #e02050;
                 color: #fff;
             }
         </style>
