Bg green and color blue - main

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 width: 100%;
             }
             body{
-                background-color: #e02050;
-                color: #fff;
+                /* <!-- bg Green --> */
+                background-color: #03f323;
+                /* color Blue  */
+                color: #2600ff;
             }
         </style>
     </head>
