--- a/index.html
+++ b/index.html
@@ -10,20 +10,7 @@
         <title>CFBCursos - Curso de Git/Github</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            .logo{
-                width: 200px;
-            }
-            .banner{
-                width: 100%;
-            }
-            body{
-                /* <!-- bg Green --> */
-                background-color: #03f323;
-                /* color Blue  */
-                color: #2600ff;
-            }
-        </style>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <h1>CFBCursos w</h1>
