--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>CFBCursos - Curso de Git/Github</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>CFBCursos w</h1>
