--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>CFBCursos - Curso de Git/Github</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        <style>
+            .logo{
+                width: 200px;
+            }
+            .banner{
+                width: 100%;
+            }
+            body{
+                /* <!-- bg Green --> */
+                background-color: #03f323;
+                /* color Blue  */
+                color: #2600ff;
+            }
+
+        </style>
     </head>
     <body>
         <h1>CFBCursos w</h1>
