Ajout du fichier css/style.css et modification de index.html pour refléter le nouveau style. correction des erreurs typographiques dans css/style.css

--- a/index.html
+++ b/index.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>CFBCursos - Curso de Git/Github</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">        
-        <style>
-            .logo{
-                width: 200px;
-            }
-            .banner{
-                width: 100%;
-            }
-            body{
-                /* <!-- bg Green --> */
-                background-color: #03f323;
-                /* color Blue  */
-                color: #2600ff;
-            }
-
-        </style>
+        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>CFBCursos w</h1>
+    <h1>CFBCursos w</h1>
         <h2>Curso de Git/Github</h2>
         <h3>Cours 11 git Merge gestion des conflits</h3>
         <p>www.youtube.com/cfbcursos</p>
+        <div class="container">
+            <div>
+                <h2>Cours 1</h2>  
+                <p>Aula 1 do curso de Git/Hub</p>
+            </div>
+             <div>
+                <h2>Cours 2</h2>  
+                <p>Aula 2 do curso de Git/Hub</p>
+            </div>
+             <div>
+                <h2>Cours 3</h2>  
+                <p>Aula 3 do curso de Git/Hub</p>
+            </div>
+        </div>
+
+
+
         <img src="logo_2025_v2.jpg" class="logo"/>
-        <p>Aula 2 do curso de Git/Hub</p>
+      
         <a href="https://www.youtube.com/cfbcursos" target="_blank">Acessar canal</a>
         <a href="https://www.youtube.com/playlist?list=PLx4x_zx8csUhopU45en_VDUS9hkze64xO" target="_blank">Curso de Git Github</a>
         <img src="channels4_banner.jpg" class="banner"/>
-
     </body>
 </html>
