Mise en page des div

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         <h3>Cours 11 git Merge gestion des conflits</h3>
         <p>www.youtube.com/cfbcursos</p>
         <div class="container">
-            <div>
+            <div class="bg-green-sea">
                 <h2>Cours 1</h2>  
                 <p>Aula 1 do curso de Git/Hub</p>
             </div>
-             <div>
+             <div class="bg-green-nephritis">
                 <h2>Cours 2</h2>  
                 <p>Aula 2 do curso de Git/Hub</p>
             </div>
-             <div>
+             <div class="bg-blue-belize">
                 <h2>Cours 3</h2>  
                 <p>Aula 3 do curso de Git/Hub</p>
             </div>
             
         </div>
 
-
+<br/>
 
         <img src="logo_2025_v2.jpg" class="logo"/>
       
